fixed alignment

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -39,13 +39,22 @@
 }
 
 .link a {
-  color: var(--color-text);
-  text-decoration: none;
-  font-size: 30px;
-  font-weight: 400;
-  letter-spacing: 1.5px;
-}
 
+  color: var(--color-text);
+
+  text-decoration: none;
+
+  font-size: 30px;
+
+  font-weight: 400;
+
+  letter-spacing: 1.5px;
+
+  word-break: break-word;
+
+  white-space: normal;  
+
+}
 @media screen and (max-width: 830px) {
   .container {
     flex-direction: column;
